Update Superstores Sales Data Analysis Project.ipynb

--- a/Superstores Sales Data Analysis Project.ipynb
+++ b/Superstores Sales Data Analysis Project.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "**Data Analyst - Oluwatoyin Egunjobi**\n",
     "\n",
+    "**Data Source - Kaggle\n",
     "\n",
     "**Primary Business Problem:**\n",
     "\n",
