--- a/Superstores Sales Data Analysis Project.ipynb
+++ b/Superstores Sales Data Analysis Project.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Data Analyst - Oluwatoyin Egunjobi**\n",
     "\n",
-    "**Data Source - Kaggle\n",
+    "**Data Source - Kaggle**\n",
     "\n",
     "**Primary Business Problem:**\n",
     "\n",
