Update Superstores Sales Data Analysis Project.ipynb

--- a/Superstores Sales Data Analysis Project.ipynb
+++ b/Superstores Sales Data Analysis Project.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Data Source - Kaggle**\n",
     "\n",
-    "**Primary Business Problem:**\n",
+    "**_Primary Business Problem_:**\n",
     "\n",
     "\"How can we optimize our customer acquisition and retention strategies to maximize revenue growth across different customer segments while efficiently allocating marketing resources?\"\n",
     "\n"
