Update Superstores Sales Data Analysis Project.ipynb

--- a/Superstores Sales Data Analysis Project.ipynb
+++ b/Superstores Sales Data Analysis Project.ipynb
@@ -5,15 +5,15 @@
    "id": "d416f988-e1b3-41be-bf9c-46871095a4aa",
    "metadata": {},
    "source": [
-    "**EFG Wholesales Company** \n",
+    "# **EFG Wholesales Company** \n",
     "\n",
-    "**24/06/2025**\n",
+    "# **24/06/2025**\n",
     "\n",
-    "**Data Analyst - Oluwatoyin Egunjobi**\n",
+    "# **Data Analyst - _Oluwatoyin Egunjobi_**\n",
     "\n",
-    "**Data Source - Kaggle**\n",
+    "# **Data Source - Kaggle**\n",
     "\n",
-    "**_Primary Business Problem_:**\n",
+    "# **_Primary Business Problem_:**\n",
     "\n",
     "\"How can we optimize our customer acquisition and retention strategies to maximize revenue growth across different customer segments while efficiently allocating marketing resources?\"\n",
     "\n"
